# Laser-Cloud-Viewer

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  commandline.hpp  main.cpp  model.cpp  model.hpp  noise_remover.cpp  pcd_viewer.cpp  register.cpp  save.cpp  scale_to_kitti_cli.cpp  segemt.cpp  test.cpp  typedefs.h  ui.cxx  ui.fl  ui.h  visualize.cpp
data/: scale_example.json
file/: opener.cpp  opener.hpp
kitti/: kitti_utils.cpp  kitti_utils.hpp  scale_converter.cpp  scale_converter.hpp
processing/: cloud_processing.cpp  cloud_processing.hpp
scripts/: build_scale_example.py
simple_vis/: simple_vis.cpp  simple_vis.hpp
tests/: test_scale_example_json.py  unit_tests.cpp
